[tool.poetry]
name = "checkatlas"
version = "0.4.0"
description="One liner tool to check the quality of your single-cell atlases."
authors = ["becavin-lab"]
readme = "README.md"
license = "BSD 3-Clause"
packages = [{include = "checkatlas"}]
include = ["checkatlas/checkatlas_workflow.nf","pyproject.toml"]
exclude = ["tests/", ".github", "*dask-worker-space*"]
homepage = "https://checkatlas.readthedocs.io/"
repository = "https://github.com/becavin-lab/checkatlas/"
documentation = "https://checkatlas.readthedocs.io/"


[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.1"
llvmlite = "^0.39.1"
numba = "^0.56.4"
types-pyyaml = "^6.0.12.6"
scanpy = "^1.9.1"
numpy = "^1.23.5"
poetry = "^1.5.1"
rpy2 = "3.5.10"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
setuptools = "^67.3.2"
gitchangelog = "^3.0.4"
black = "^23.1.0"
flake8 = "^6.0.0"
codecov = "^2.1.12"
pytest-cov = "^4.0.0"
isort = "^5.12.0"
mypy = "^1.0.0"
jupyter-black = "^0.3.3"
no-implicit-optional = "^1.3"
leidenalg = "^0.10.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocstrings-python-legacy = "^0.2.3"

[tool.mypy]
no_implicit_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkatlas = 'checkatlas.__main__:main'
checkatlas-workflow = 'checkatlas.checkatlas_workflow:main'
