[tool.poetry]
name = "checkatlas"
version = "0.4.17"
description="One liner tool to check the quality of your single-cell atlases."
authors = ["becavin-lab"]
readme = "README.md"
license = "BSD 3-Clause"
packages = [{include = "checkatlas"}]
include = ["checkatlas/checkatlas_workflow.nf","pyproject.toml"]
exclude = ["tests/", ".github", "*dask-worker-space*"]
homepage = "https://checkatlas.readthedocs.io/"
repository = "https://github.com/becavin-lab/checkatlas/"
documentation = "https://checkatlas.readthedocs.io/"


[tool.poetry.dependencies]
python = ">=3.12"
scikit-learn = ">=1.3"
scanpy = ">=1.9"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {version = "^0.27.0", extras = ["python"]}
pymdown-extensions = "^10.0"


[tool.mypy]
no_implicit_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkatlas = 'checkatlas.__main__:main'
checkatlas-workflow = 'checkatlas.checkatlas_workflow:main'
