[tool.poetry]
name = "checkatlas"
version = "0.5.4"
description="One liner tool to check the quality of your single-cell atlases."
authors = ["becavin-lab"]
readme = "README.md"
license = "BSD 3-Clause"
packages = [{include = "checkatlas"}]
include = ["checkatlas/checkatlas_workflow.nf","pyproject.toml"]
exclude = ["tests/", ".github", "*dask-worker-space*"]
homepage = "https://checkatlas.readthedocs.io/"
repository = "https://github.com/becavin-lab/checkatlas/"
documentation = "https://checkatlas.readthedocs.io/"


[tool.poetry.dependencies]
python = ">=3.12"
scikit-learn = ">=1.3"
scanpy = ">=1.9"
rpy2 = "^3.6.1"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = {version = "^0.27.0", extras = ["python"]}
pymdown-extensions = "^10.0"



[tool.poetry.group.dev.dependencies]
setuptools = "^80.9.0"
gitchangelog = "^3.0.4"
black = "^25.1.0"
flake8 = "^7.3.0"
pytest-cov = "^6.2.1"
isort = "^6.0.1"
mypy = "^1.16.1"
no-implicit-optional = "^1.4"

[tool.mypy]
no_implicit_optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
checkatlas = 'checkatlas.__main__:main'
checkatlas-workflow = 'checkatlas.checkatlas_workflow:main'
